<resources>
    <string name="app_name">Training App</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Senha</string>
    <string name="login_title">Vamos iniciar os treinos!</string>
    <string name="login_subtitle">Entre com suas credenciais</string>
    <string name="forget_password">Esqueceu a senha?</string>
    <string name="login">Entrar</string>
    <string name="new_account">Novo por aqui? Crie uma conta!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Francisco Eduardo Pereira Sousa Silva</string>
    <string name="nav_header_subtitle">franciscosilva22082002@gmail.com</string>

    <string name="greeting">Bom dia, %1$s!</string>
    <string name="start_training_message">Selecione seu treino e vamos começar.</string>
    <string name="training_range_message">Período do Treino: %1$s</string>

    <string name="menu_home">Home</string>
</resources>